--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:25.0.0'
     implementation 'com.android.support:cardview-v7:25.0.0'
     implementation 'com.firebaseui:firebase-ui:0.6.1'
+   // implementation 'com.google.android.gms:play-services:7.5.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
